--- a/angular.json
+++ b/angular.json
@@ -22,6 +22,7 @@
             ],
             "styles": [
               "node_modules/bootstrap/dist/css/bootstrap.min.css",
+              "node_modules/fullcalendar/dist/fullcalendar.min.css",
               "src/styles.css"
             ],
             "scripts": [
