--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@ng-bootstrap/ng-bootstrap": "^2.0.0",
     "@types/jquery": "^3.3.2",
     "bootstrap": "^4.1.1",
+    "classlist.js": "^1.1.20150312",
     "core-js": "^2.5.7",
     "fullcalendar": "^3.9.0",
     "jquery": "^3.3.1",
@@ -31,6 +32,7 @@
     "popper.js": "^1.14.3",
     "rxjs": "^6.2.0",
     "rxjs-compat": "^6.2.0",
+    "web-animations-js": "^2.3.1",
     "zone.js": "^0.8.26"
   },
   "devDependencies": {
