--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "@types/jasmine": "^2.8.8",
     "@types/jasminewd2": "^2.0.3",
     "@types/node": "^10.3.0",
+    "angular-cli-ghpages": "^0.5.3",
     "codelyzer": "^4.3.0",
     "jasmine-core": "^3.1.0",
     "jasmine-spec-reporter": "^4.2.1",
